# k8s-ray-playground

./: Dockerfile  Makefile  pyproject.toml
k8s/ray/: cluster-custom-image.yaml  cluster-embedded-code.yaml
src/ray_demo/: fib.py
