[tool.poetry]
name = "ray-demo"
version = "0.1.0"
description = ""
authors = ["Mark deVilliers <mark.devilliers@adarga.ai>"]
readme = "README.md"
packages = [{include = "ray_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
ray = "2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
